[gd_scene load_steps=4 format=3 uid="uid://boc2k0wba2sen"]

[ext_resource type="Script" path="res://Scripts/GameSetup.gd" id="1_uurcc"]
[ext_resource type="Script" path="res://Scripts/Lobby.gd" id="2_o2ker"]
[ext_resource type="PackedScene" uid="uid://bqahwx2vtmu11" path="res://control.tscn" id="7_fifoh"]

[node name="Game" type="Node3D"]
transform = Transform3D(1, 0.000131332, 0.000753935, -0.000130745, 1, -0.00081371, -0.000754036, 0.000813616, 0.999999, 0, 0, 0)
script = ExtResource("1_uurcc")

[node name="Lobby" parent="." instance=ExtResource("7_fifoh")]
unique_name_in_owner = true
visible = true
script = ExtResource("2_o2ker")

[node name="Host" parent="Lobby" index="0"]
text = "Create
"

[node name="Join" parent="Lobby" index="1"]
offset_left = 336.0
offset_right = 380.0

[node name="Start" parent="Lobby" index="2"]
offset_left = 556.0
offset_top = 64.0
offset_right = 656.0
offset_bottom = 95.0

[node name="TextEdit" type="TextEdit" parent="Lobby"]
offset_left = 41.0
offset_top = 168.0
offset_right = 940.0
offset_bottom = 221.0

[connection signal="pressed" from="Lobby/Host" to="Lobby" method="create_game"]
[connection signal="pressed" from="Lobby/Join" to="Lobby" method="join_game"]
[connection signal="pressed" from="Lobby/Start" to="Lobby" method="_on_start_pressed"]

[editable path="Lobby"]
